--- a/stance-bias-section2/data/PImPo/preProcessing.ipynb
+++ b/stance-bias-section2/data/PImPo/preProcessing.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
       "text/plain": "          country                     party  \\\n0          sweden  swe: Green Ecology Party   \n1          sweden  swe: Green Ecology Party   \n2          sweden  swe: Green Ecology Party   \n3          sweden  swe: Green Ecology Party   \n4          sweden  swe: Green Ecology Party   \n...           ...                       ...   \n8955  new zealand          nzl: Maori Party   \n8956  new zealand          nzl: Maori Party   \n8957  new zealand          nzl: Maori Party   \n8958  new zealand           nzl: Mana Party   \n8959  new zealand           nzl: Mana Party   \n\n                                                content       target stance  \n0     Vi vill ge människor möjligheten att leva i et...  Integration  FAVOR  \n1     och där lika rättigheter för alla är en självk...  Integration  FAVOR  \n2                     Flyktingpolitiken ska göras human  Immigration  FAVOR  \n3     Förslagen i vårt valmanifest grundar sig i en ...  Immigration  FAVOR  \n4     Alla barn har rätt till ett liv i kärlek, resp...  Integration  FAVOR  \n...                                                 ...          ...    ...  \n8955  The Office of the Controller and Auditor Gener...  Integration   NONE  \n8956  In return, we expect services to meet the need...  Integration  FAVOR  \n8957  All new citizens to complete a course in the h...  Integration   NONE  \n8958  Maori, Pasifika and migrant peoples are dispro...  Integration  FAVOR  \n8959  including for Maori, Pasifika and migrant work...  Integration  FAVOR  \n\n[8960 rows x 5 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>party</th>\n      <th>content</th>\n      <th>target</th>\n      <th>stance</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>sweden</td>\n      <td>swe: Green Ecology Party</td>\n      <td>Vi vill ge människor möjligheten att leva i et...</td>\n      <td>Integration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>sweden</td>\n      <td>swe: Green Ecology Party</td>\n      <td>och där lika rättigheter för alla är en självk...</td>\n      <td>Integration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>sweden</td>\n      <td>swe: Green Ecology Party</td>\n      <td>Flyktingpolitiken ska göras human</td>\n      <td>Immigration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>sweden</td>\n      <td>swe: Green Ecology Party</td>\n      <td>Förslagen i vårt valmanifest grundar sig i en ...</td>\n      <td>Immigration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>sweden</td>\n      <td>swe: Green Ecology Party</td>\n      <td>Alla barn har rätt till ett liv i kärlek, resp...</td>\n      <td>Integration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>8955</th>\n      <td>new zealand</td>\n      <td>nzl: Maori Party</td>\n      <td>The Office of the Controller and Auditor Gener...</td>\n      <td>Integration</td>\n      <td>NONE</td>\n    </tr>\n    <tr>\n      <th>8956</th>\n      <td>new zealand</td>\n      <td>nzl: Maori Party</td>\n      <td>In return, we expect services to meet the need...</td>\n      <td>Integration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>8957</th>\n      <td>new zealand</td>\n      <td>nzl: Maori Party</td>\n      <td>All new citizens to complete a course in the h...</td>\n      <td>Integration</td>\n      <td>NONE</td>\n    </tr>\n    <tr>\n      <th>8958</th>\n      <td>new zealand</td>\n      <td>nzl: Mana Party</td>\n      <td>Maori, Pasifika and migrant peoples are dispro...</td>\n      <td>Integration</td>\n      <td>FAVOR</td>\n    </tr>\n    <tr>\n      <th>8959</th>\n      <td>new zealand</td>\n      <td>nzl: Mana Party</td>\n      <td>including for Maori, Pasifika and migrant work...</td>\n      <td>Integration</td>\n      <td>FAVOR</td>\n    </tr>\n  </tbody>\n</table>\n<p>8960 rows × 5 columns</p>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +30,7 @@
    "source": [
     "# reading the dataset\n",
     "PImPo = pd.read_csv(\"PImPo.csv\",delimiter=\";\")\n",
-    "PImPo.rename(columns={\"Unnamed: 0\":\"id\",1:\"contry\",2:\"party\",3:\"content\",4:\"target\",5:\"stance\"},inplace=True)\n",
+    "PImPo.rename(columns={\"Unnamed: 0\":\"id\",1:\"country\",2:\"party\",3:\"content\",4:\"target\",5:\"stance\"},inplace=True)\n",
     "PImPo.drop(columns=[\"id\"],inplace=True)\n",
     "PImPo"
    ],
@@ -42,13 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "outputs": [],
    "source": [
-    "# drop country column\n",
-    "PImPo.drop(columns=[\"country\"],inplace=True)\n",
     "# use for additional filters\n",
-    "# PImPo = PImPo.loc[PImPo[\"country\"]==\"germany\"].drop(columns=[\"country\"])"
+    "country = \"norway\"\n",
+    "PImPo = PImPo.loc[PImPo[\"country\"]==country].drop(columns=[\"country\"])"
    ],
    "metadata": {
     "collapsed": false,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# use for test/train split\n",
@@ -75,11 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "outputs": [],
    "source": [
-    "PImPo_train.to_csv(\"train.csv\",index=False)\n",
-    "PImPo_test.to_csv(\"test.csv\",index=False)\n",
+    "if not os.path.exists(\"./\"+country):\n",
+    "    os.mkdir(\"./\"+country)\n",
+    "\n",
+    "PImPo_train.to_csv(country+\"/train.csv\",index=False)\n",
+    "PImPo_test.to_csv(country+\"/test.csv\",index=False)\n",
     "\n"
    ],
    "metadata": {
@@ -91,19 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "FAVOR      5163\nAGAINST    2025\nNONE        876\nName: stance, dtype: int64"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 51,
+   "outputs": [],
    "source": [
-    "PImPo_train.stance.value_counts()"
+    "# PImPo.country.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
